[Add] description index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Presentation from '../components/Presentation.astro';
+
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>My Astro Site</h1>
+<Layout title="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web"
+		description="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web con mas de 5 años de experiencia">
+	<main class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white">
+		<Presentation />
 	</main>
 </Layout>
