--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,24 +1,58 @@
 ---
+
+import Header from '../components/Header.astro';
+import '@fontsource-variable/onest';
+
+import '../styles/index.css';
 interface Props {
 	title: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark" class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+
+		<script is:inline>
+			const themeSaved = localStorage.getItem('theme');
+
+			if(themeSaved){
+				document.documentElement.dataset.theme = themeSaved;
+			} else {
+				const prefersDark = window.matchMedia(
+					"(prefers-color-scheme: dark)"
+				).matches;
+				document.documentElement.dataset.theme = prefersDark
+					? 'dark'
+					: 'light';
+			}
+
+			window
+				.matchMedia("(prefers-color-scheme: dark)")
+				.addEventListener("change", (event) => {
+					if (!localStorage.getItem("theme")) {
+						document.documentElement.dataset.theme = event.matches
+							? "dark"
+							: "light";
+					}
+				})
+		</script>
 	</head>
-	<body>
-		<slot />
+
+	<body >
+			<Header />
+			<slot />
 	</body>
+
 </html>
 <style is:global>
 	:root {
@@ -33,7 +67,7 @@ const { title } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: 'Onest Variable', sans-serif;
 		background: #13151a;
 		background-size: 224px;
 	}
