--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -20,7 +20,7 @@ const EXPERIENCE = [
   }
 ]
 ---
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-purple-800">
   {
     EXPERIENCE.map((exp) => (
       <ExperienceItem {...exp}/>
