[Add] styles | index | layout

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,20 +3,20 @@ import ExperienceItem from './ExperienceItem.astro';
 
 const EXPERIENCE = [
   {
-    date: 'February 2022',
-    title: 'Application UI code in Tailwind CSS',
-    description: 'Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.',
-    link: 'Learn more',
+    date: 'Actualmente...',
+    title: 'Aplicacion UI codigo en Tailwind CSS',
+    description: 'Obtenga acceso a más de 20 páginas, incluido un diseño de panel, gráficos, tablero kanban, calendario y páginas de marketing y comercio electrónico para pedidos anticipados.',
+    link: 'Saber más...',
   },
   {
-    date: 'March 2022',
-    title: 'Marketing UI design in Figma',
-    description: 'All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.'
+    date: 'Marzo 2022',
+    title: 'Diseño UI en Figma',
+    description: 'Todas las páginas y componentes se diseñan primero en Figma y mantenemos una paridad entre las dos versiones incluso cuando actualizamos el proyecto.'
   },
   {
-    date: 'April 2022',
-    title: 'E-Commerce UI code in Tailwind CSS',
-    description: 'Get started with dozens of web components and interactive elements built on top of Tailwind CSS.',
+    date: 'Enero 2022',
+    title: 'E-Commerce UI codigo en Tailwind CSS',
+    description: 'Comience con docenas de componentes web y elementos interactivos creados sobre Tailwind CSS.',
   }
 ]
 ---
