--- a/src/components/SecContainer.astro
+++ b/src/components/SecContainer.astro
@@ -1,6 +1,6 @@
 ---
-const { class: className } = Astro.props
+const { class: className, id } = Astro.props
 ---
-<section class=`w-full lg:w-[740px] mx-auto relative ${className}`>
+<section id={id} class=`w-full lg:w-[740px] mx-auto relative ${className}`>
   <slot />
 </section>
