--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,14 +2,15 @@
 import ThemeSwitcher from './ThemeSwitcher.astro';
 ---
 
-<header class="flex items-center justify-between py-3 px-32">
+<header id="top" class="flex items-center justify-between py-3 px-32">
   <img src="/logo.png" alt="znup logo" class="rounded-full size-6"/>
 
   <nav class="flex flex-row gap-x-10">
     <ThemeSwitcher />
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/projects">Projects</a>
-    <a href="/contact">Contact</a>
+    <a href="#top">Inicio</a>
+    <a href="#about">Sobre nosotros</a>
+    <a href="#experience">Experiencia</a>
+    <a href="#projects">Proyectos</a>
+    <a href="#contact">Contacto</a>
   </nav>
 </header>
