--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,10 @@ import Title from '../components/Title.astro';
 <Layout title="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web"
 		description="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web con mas de 5 años de experiencia">
 	<main class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white">
-		<SecContainer class="py-36">
+		<SecContainer id="about" class="py-36">
 			<Presentation />
-			<Spacer class="py-16" />
+		</SecContainer>
+		<SecContainer id="experience" class="py-12">
 			<Title />
 			<Experience />
 		</SecContainer>
