--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,9 @@
 ---
 
 import Header from '../components/Header.astro';
-import '@fontsource-variable/onest';
+import Footer from '../components/Footer.astro';
 
+import '@fontsource-variable/onest';
 import '../styles/index.css';
 interface Props {
 	title: string;
@@ -51,6 +52,7 @@ const { title, description } = Astro.props;
 	<body >
 			<Header />
 			<slot />
+			<Footer />
 	</body>
 
 </html>
