--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Title from '../components/Title.astro';
 		</SecContainer>
 		<SecContainer id="experience" class="py-12">
 			<Title />
+			<Spacer class="my-8"/>
 			<Experience />
 		</SecContainer>
 	</main>
