--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -11,8 +11,8 @@ const { date, title, description, link } = Astro.props
 <li class="mb-10 ms-4">
   <div class="absolute w-3 h-3 bg-purple-300 rounded-full mt-1.5 -start-1.5 border border-purple-800 dark:border-gray-900 dark:bg-gray-700"></div>
   <time class="mb-1 text-sm font-normal leading-none text-gray-400">{date}</time>
-  <h3 class="text-lg font-semibold text-purple-300">{title}</h3>
-  <p class="mb-4 text-base font-normal text-gray-500 text-pretty">{description}</p>
+  <h3 class="text-base lg:text-lg font-semibold text-purple-300">{title}</h3>
+  <p class="mb-4 text-sm lg:text-base font-normal text-gray-500 text-pretty">{description}</p>
   {
     link && (
       <a href={link} class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
