--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import ThemeSwitcher from './ThemeSwitcher.astro';
 ---
 
-<header id="top" class="flex items-center justify-between py-3 px-32">
+<header id="top" class="flex items-center justify-between py-3 md:px-8 xl:px-32">
   <img src="/logo.png" alt="znup logo" class="rounded-full size-6"/>
 
   <nav class="flex flex-row gap-x-10">
