--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Title from '../components/Title.astro';
 
 <Layout title="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web"
 		description="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web con mas de 5 años de experiencia">
-	<main class="h-full overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white">
+	<main class="h-full px-4 overflow-x-hidden bg-default text-default text-base selection:bg-secondary selection:text-white">
 		<SecContainer id="about" class="py-36">
 			<Presentation />
 		</SecContainer>
