--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
 <footer>
-  <p class="text-center text-gray-400">© {new Date().getFullYear()} znup. Todos los derechos reservados.</p>
+  <p class="text-center text-gray-400">© {new Date().getFullYear()} znup. Casi todos los derechos reservados.</p>
 </footer>
