--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,4 +1,6 @@
 
 <h2 class="mb-4 text-lg lg:text-2xl font-extrabold leading-none tracking-tight md:text-xl">
-  <span class="underline underline-offset-3 decoration-8 decoration-purple-800">Experiencia laboral</span>
+  <span class="underline underline-offset-3 decoration-8 decoration-purple-800">
+    <slot />
+  </span>
 </h2>
