--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,9 @@ import Experience from '../components/Experience.astro';
 import SecContainer from '../components/SecContainer.astro';
 import Spacer from '../components/Spacer.astro';
 import Title from '../components/Title.astro';
+import Projects from '../components/Projects.astro';
+import ProjectIcon from '../icons/Project.astro';
+import ExpIcon from '../icons/Exp.astro';
 ---
 
 <Layout title="Portfolio del equipo devs 404 - Desarrolladores, programadores y Diseñadores web"
@@ -14,9 +17,21 @@ import Title from '../components/Title.astro';
 			<Presentation />
 		</SecContainer>
 		<SecContainer id="experience" class="py-12">
-			<Title />
-			<Spacer class="my-8"/>
+
+			<div class="flex items-center gap-2">
+				<ExpIcon size="7"/>
+				<Title>Experiencia Laboral</Title>
+				<Spacer class="my-8"/>
+			</div>
 			<Experience />
+		</SecContainer>
+		
+		<SecContainer id="projects" class="py-12">
+			<div class="flex items-center gap-2">
+				<ProjectIcon class="size-7" />
+				<Title>Proyectos</Title>
+			</div>
+			<Projects />
 		</SecContainer>
 	</main>
 </Layout>
