--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,91 @@
 ---
 import ThemeSwitcher from './ThemeSwitcher.astro';
+
+interface Props {
+  activeNav?: "home" | "about" | "projects" | "contact";
+}
+
+const { activeNav } = Astro.props;
 ---
 
 <header id="top" class="flex items-center justify-between py-3 md:px-8 xl:px-32">
-  <img src="/logo.png" alt="znup logo" class="rounded-full size-6"/>
+  <img src="/logodev.png" alt="znup logo" class="rounded-full size-6 ml-5"/>
 
-  <nav class="flex flex-row gap-x-10">
-    <ThemeSwitcher />
-    <a href="#top">Inicio</a>
-    <a href="#about">Sobre nosotros</a>
-    <a href="#experience">Experiencia</a>
-    <a href="#projects">Proyectos</a>
-    <a href="#contact">Contacto</a>
+  <nav 
+    id="nav-menu"
+    class="flex flex-row gap-x-10 mr-5">
+    <button
+      class="hamburger-menu focus-outline"
+      aria-label="Open menu"
+      aria-expanded="false"
+      aria-controls="menu-items"
+    >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="24"
+      height="24"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="1.5"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="menu-icon"
+      >
+        <line x1="7" y1="12" x2="21" y2="12" class="line"></line>
+        <line x1="3" y1="6" x2="21" y2="6" class="line"></line>
+        <line x1="12" y1="18" x2="21" y2="18" class="line"></line>
+        <line x1="18" y1="6" x2="6" y2="18" class="close"></line>
+        <line x1="6" y1="6" x2="18" y2="18" class="close"></line>
+      </svg>
+    </button>
+    <div id="menu-items" class="hidden flex flex-col absolute top-[6%] right-[3%] w-[40%] bg-slate-900/95 z-10 px-2 py-4 rounded-md">
+      <ThemeSwitcher />
+      <a href="#top" class={activeNav === "home" ? "active" : ""} >Inicio</a>
+      <a href="#about">Sobre nosotros</a>
+      <a href="#experience">Experiencia</a>
+      <a href="#projects">Proyectos</a>
+      <a href="#contact">Contacto</a>
+    </div>
   </nav>
 </header>
+
+<style>
+  .hamburger-menu {
+    @apply sm:hidden;
+  }
+  .hamburger-menu svg {
+    @apply size-6 scale-125;
+  }
+  .menu-icon line {
+    @apply transition-opacity duration-75 ease-in-out;
+  }
+  .menu-icon .close {
+    @apply opacity-0;
+  }
+  .menu-icon.is-active .line {
+    @apply opacity-0;
+  }
+  .menu-icon.is-active .close {
+    @apply opacity-100;
+  }
+</style>
+
+<script> 
+  function toggleMenu() {
+    // toggle menu
+    const menuBtn = document.querySelector('.hamburger-menu');
+    const menuIcon = document.querySelector('.menu-icon');
+    const menuItems = document.querySelector('#menu-items');
+
+    menuBtn?.addEventListener('click', () => {
+      const menuExpanded = menuBtn.getAttribute('aria-expanded') === 'true';
+      menuIcon?.classList.toggle('is-active');
+      menuBtn.setAttribute('aria-expanded', menuExpanded ? 'false' : 'true');
+      menuBtn.setAttribute('aria-label', menuExpanded ? 'Open menu' : 'Close menu');
+      menuItems?.classList.toggle('hidden');
+    })
+  }
+  toggleMenu();
+  document.addEventListener('astro:after-swap', toggleMenu);
+</script>
