--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,3 +10,6 @@ a,
   @apply bg-clip-text text-transparent;
   @apply bg-gradient-to-br from-indigo-500 via-fuchsia-500 to-pink-500;
 }
+.display-none {
+  @apply hidden;
+}
